--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h3 id="openbtn" class="aot">☰</h3>
 	</div>
 		<div id="settings">
-			<div style="width: 9000%; margin-left:30px">
+			<div style="width: 9000%; padding-left:30px">
 			<h2>Settings</h2>
 			<input type="text" placeholder="Enter Name Here" class="settingsinput" id="nameinput"></input>
 			<button type="button" class="round confirmbutton" id="snc">✓</button>
