Added todo button (Has no function yet)

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 			<h2>Settings</h2>
 			<input type="text" placeholder="Enter Name Here" class="settingsinput" id="nameinput"></input>
 			<button type="button" class="round confirmbutton" id="snc">✓</button>
-			<br>
+			<br><br>
 			<input type="text" placeholder="Custom Wallpaper Url" class="settingsinput" id="wallpaperinput"></input>
 			<button type="button" class="round confirmbutton" id="appwpp">✓</button>
 			<button type="button" class="round removebutton" id="remwpp">×</button>
 			</div>
 		</div>
 		<div id="close">
-			<button class="round closebutton"><i style="font-size:200%">×</i></button>
+			<button class="round todobutton"><i style="font-size:200%">📋</i></button>
 		</div>
 	<div class="main">
 		<center>
@@ -34,5 +34,5 @@
 		<h1 id="hello">Check if you have javascript enabled</h1>
 		</center>
 	</div>
-</body>
+	<button class="round todobutton">?</button>
 </html>
