Fixed accidental settings close button removal

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div id="close">
-			<button class="round todobutton"><i style="font-size:200%">📋</i></button>
+			<button class="round closebutton""><i style="font-size:200%">×</i></button>
 		</div>
 	<div class="main">
 		<center>
