--- a/index.html
+++ b/index.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Materialhub Reborn</title>
-<link rel="icon" type="image/png" href="https://www.materialui.co/materialIcons/action/home_grey_192x192.png">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta charset="UTF-8">
-<link rel="stylesheet" href="styles.css">
-<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-<script src="scripts.js"></script>
+    <title>Materialhub Reborn</title>
+    <link rel="icon" type="image/png" href="https://www.materialui.co/materialIcons/action/home_grey_192x192.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <script src="scripts.js"></script>
 </head>
+
 <body id="iotd">
-	<div class="menubar">
-		<h2 class="header">Materialhub Reborn</h2>
-		<h3 id="openbtn" class="aot">☰</h3>
-	</div>
-		<div id="settings">
-			<div style="width: 9000%; padding-left:30px">
-			<h2>Settings</h2>
-			<input type="text" placeholder="Enter Name Here" class="settingsinput" id="nameinput"></input>
-			<button type="button" class="round confirmbutton" id="snc">✓</button>
-			<br><br>
-			<input type="text" placeholder="Custom Wallpaper Url" class="settingsinput" id="wallpaperinput"></input>
-			<button type="button" class="round confirmbutton" id="appwpp">✓</button>
-			<button type="button" class="round removebutton" id="remwpp">×</button>
-			</div>
-		</div>
-		<div id="close">
-			<button class="round closebutton""><i style="font-size:200%">×</i></button>
-		</div>
-	<div class="main">
-		<center>
-		<h1 id="clock">Check if you have javascript enabled</h1>
-		<h1 id="hello">Check if you have javascript enabled</h1>
-		</center>
-	</div>
-	<button class="round todobutton">?</button>
+    <div id="menubar">
+        <h2 class="header">Materialhub Reborn</h2>
+        <h3 id="openbtn" class="aot">☰</h3>
+    </div>
+    <div id="settings">
+        <div style="width: 9000%; padding-left:30px">
+            <h2>Settings</h2>
+            <input type="text" placeholder="Enter Name Here" class="settingsinput" id="nameinput"></input>
+            <button type="button" class="round confirmbutton" id="snc">✓</button>
+            <br><br>
+            <input type="text" placeholder="Custom Wallpaper Url" class="settingsinput" id="wallpaperinput"></input>
+            <button type="button" class="round confirmbutton" id="appwpp">✓</button>
+            <button type="button" class="round removebutton" id="remwpp">×</button>
+            <br><br>
+            <input type="color" id="cpicker" value="#323232">
+            <i style="font-size: 115%">Custom Color </i>
+            <button type="button" class="round removebutton" id="remcolor">×</button>
+        </div>
+    </div>
+    <div id="close">
+        <button class="round closebutton"><i style="font-size:200%">×</i></button>
+    </div>
+    <div class="main">
+        <center>
+            <h1 id="clock">Check if you have javascript enabled</h1>
+            <h1 id="hello">Check if you have javascript enabled</h1>
+        </center>
+    </div>
+    <button class="round todobutton">
+        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+            <path fill="#fff" d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" />
+        </svg>
+    </button>
+
 </html>
