Added better animation and ability to use enter to add todo to todo list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button class="round closebutton"><i style="font-size:200%">×</i></button>
     </div>
     <div id="todomenu">
-	    <button class="round removebutton" id="closetodobutton">×</button><input type="text" id="task"><button class="round confirmbutton" id="add">+</button>
+	    <button class="round removebutton" id="closetodobutton">×</button><input type="text" class="settingsinput" id="task"><button class="round confirmbutton" id="add">+</button>
 	<div id="todos"></div>
 	<script src="todo.js"></script> 
     </div>
