Added search bar

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 	<script src="todo.js"></script> 
     </div>
     <div class="main">
-        <center>
+	<center>
+	    <form method="get" class="googlesearch" action="https://www.google.com/search">
+            <input type="text"></input>
+	    <button type="submit" class="round searchbutton">⌕</button>
+	    </form>
             <h1 id="clock">Check if you have javascript enabled</h1>
             <h1 id="hello">Check if you have javascript enabled</h1>
         </center>
